table cell fixed size item and alignment

--- a/check-reading/src/App.css
+++ b/check-reading/src/App.css
@@ -32,6 +32,10 @@
   margin-top:8px;
 }
 
+.cellsize{
+  width: 33.3%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
